Fix todo alignment

--- a/app/styles/components/_todo.scss
+++ b/app/styles/components/_todo.scss
@@ -5,8 +5,12 @@
   padding: 1rem;
   transition: background .3s ease;
 
-  p, input {
+  input {
     margin: 0;
+  }
+
+  p {
+    margin: 0 0 0 1rem;
   }
 
   > first-child {
